# Rusty-DNN

./: Cargo.toml  README.md
src/: main.rs  ment.rs
src/ment/layers/: Conv.rs  FC.rs  Input.rs  Sig.rs  mod.rs
src/rdnn/layers/: Conv.rs  FC.rs  Relu.rs  mod.rs
