[package]
name = "Rust_Simple_DNN"
version = "0.1.4"
edition = "2021"
description = "A crate for making optimized modular neural networks in rust"
readme = "README.md"
repository = "https://github.com/TrevorBlythe/Rusty-DNN"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
